# thai-half-travel

./: .gitignore  pyproject.toml
app/: main.py
app/auth/: authentication.py
app/models/: province_model.py  reservation_model.py  user_model.py
app/routers/v1/: __init__.py  auth_router.py  province_router.py  reservation_router.py  user_router.py
app/schemas/: province_schema.py  reservation_schema.py  user_schema.py
