[project]
name = "thai-half-travel"
version = "0.1.0"
description = ""
authors = [
    {name = "Setsiri",email = "setsiriaunsiam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
